# ICPixel

./: .gitignore  Cargo.toml  MIGRATION.md  README.md  SUMMARY.md  canister_ids.json  dfx.json
docs/: README.md  alliances-and-missions.md  architecture.md  controls.md  economy-and-rewards.md  faq.md  how-to-play.md  map-and-seasons.md  nfts.md  overview.md  privacy-policy.md  terms-of-service.md
scripts/: MAINNET-DEPLOY.md  deploy.sh  export-snapshot.mjs  mainnet-snapshot.sh  package-lock.json  package.json  test-upgrade.sh  upgrade-mainnet.sh
snapshots/: README.md
src/backend/: Cargo.toml  backend.did
src/backend/src/: admin_export.rs  alliance.rs  alliance_types.rs  billing.rs  http.rs  icp_ledger.rs  icp_price.rs  lib.rs  map.rs  nft_client.rs  state.rs  treasury.rs  types.rs
src/declarations/backend/: backend.did  backend.did.d.ts  backend.did.js
src/declarations/internet_identity/: internet_identity.did.d.ts
src/declarations/nft/: nft.did  nft.did.d.ts  nft.did.js
src/frontend/: index.html  package-lock.json  package.json  vite.config.ts
src/frontend/public/: .ic-assets.json5
src/frontend/src/: AdminPanel.tsx  AlliancePanel.tsx  App.tsx  Collection.tsx  Dashboard.tsx  MissionImageCrop.tsx  MyNfts.tsx  api.ts  fmt.ts  idl.ts  index.css  ledger.ts  sound.ts  useIsMobile.ts  useTouchCanvas.ts  vite-env.d.ts
src/nft/: Cargo.toml
src/nft/src/: icrc7.rs  lib.rs  png_render.rs  state.rs  types.rs
